yiltc-go-backup/testsuite/negative/unknown_module_symbol.yilt
fn foo()
    json.nonexistent_method()
